# secret-santa

./: .pre-commit-config.yaml  README.md  participants.txt  pyproject.toml  secret_santa.py
.github/workflows/: precommit.yaml
