[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["Vincent Garcia"]
readme = "README.md"
packages = [{include = "secret_santa"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
